# WaveletMinicourse

./: CMakeLists.txt  README.md
LGTvsCDF/: CDF97.h  CMakeLists.txt  LGT.h  LGTvsCDF.cpp
VanishingMoments/: CMakeLists.txt  cdf97moments.cpp  legall53moments.cpp
cdf97/: CMakeLists.txt  cdf97.cpp
haar/: CMakeLists.txt  haar-biorthogonal.cpp  haar-int2int.cpp  haar-interleaved.cpp  haar-pyramid.cpp
legall53/: CMakeLists.txt  legall531D.cpp
legall53bandpass/: CMakeLists.txt  legall531Dbandpass.cpp  logs.txt
